--- a/quiz-style.css
+++ b/quiz-style.css
@@ -43,6 +43,7 @@ h4 {
 }
 
 input[type="button"] {
+    margin-left: 240px;
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 18px;
@@ -59,4 +60,13 @@ input[type="button"] {
 
 .wrong-answer{
     background-color: rgb(240, 127, 127);
+}
+
+#result{
+    display: block;
+    margin-top: 10px;
+    border: 5px solid #313030;
+    border-radius: 10px;
+    text-align: center;
+    color:#1a0c41;
 }
